Remove flaky webview-only cc_unittest that shouldnt run single-thread

LayerTreeHostFreesWorkerContextResourcesOnZeroMemoryLimitSynchronous
test was set to run with SINGLE_AND_MULTI_THREAD_TEST_F but since it
is testing webview-only things, this caused DCHECKs to fail, in single-
threaded compositor code that does not expect to be called. Disable
the single-threaded version of the test, as WebView only uses/supports
multi-threaded cc.

R=enne@chromium.org

Bug: 778404
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;master.tryserver.blink:linux_trusty_blink_rel
Change-Id: Ie4076509ed550977acd61f1958165636e6265122
Reviewed-on: https://chromium-review.googlesource.com/1028186
Commit-Queue: enne <enne@chromium.org>
Reviewed-by: enne <enne@chromium.org>
Cr-Commit-Position: refs/heads/master@{#554096}
Former-commit-id: a5df53794ff8c4f1d757f7087e4c57fc0fbe5c0d