cc/trees/single_thread_proxy.cc
@@ -839,7 +839,9 @@ void SingleThreadProxy::ScheduledActionPrepareTiles() {
 }
 
 void SingleThreadProxy::ScheduledActionInvalidateLayerTreeFrameSink() {
-  NOTREACHED();
+  // This is an Android WebView codepath, which only uses multi-thread
+  // compositor. So this should not occur in single-thread mode.
+  NOTREACHED() << "Android Webview use-case, so multi-thread only";
 }
 
 void SingleThreadProxy::ScheduledActionPerformImplSideInvalidation() {
